--- a/app/assets/stylesheets/_registration.scss
+++ b/app/assets/stylesheets/_registration.scss
@@ -84,6 +84,14 @@ header{
       margin-left      : 8px;
       border-radius    : 2px;
     }
+    &__optional_info{
+      color            : white;
+      font-size        : $small-font-size;
+      background-color : $registration_form_form_color;
+      padding          : 2px 4px;
+      margin-left      : 8px;
+      border-radius    : 2px;
+    }
     &__button{
       padding          :10px 50px;
       background-color : $registration_form_red;
