--- a/app/assets/stylesheets/_registration.scss
+++ b/app/assets/stylesheets/_registration.scss
@@ -76,6 +76,17 @@ header{
       padding      : 10px 16px 8px 16px;
       margin-top   : 8px;
     }
+    &__select{
+      -webkit-appearance: none;
+      background-color  : white;
+      line-height       : 1.5;
+      color             : $registration_form_font_color;
+      border            : 1px solid $registration_form_form_color;
+      border-radius     : 4px;
+      width             : 100%;
+      padding           : 10px 16px 8px 16px;
+      margin-top        : 8px;
+    }
     &__must_info{
       color            : white;
       font-size        : $small-font-size;
