--- a/app/views/addresses/new.html.haml
+++ b/app/views/addresses/new.html.haml
@@ -26,13 +26,13 @@
             = f.label "郵便番号", class: "form__field__label"
             %i.form__field__must_info 必須
             %br
-            = f.number_field :zip_code, placeholder: "例）1234567", class: "form__field__form"
+            = f.text_field :zip_code, placeholder: "例）1234567", class: "form__field__form"
 
           .form__field
             = f.label "都道府県", class: "form__field__label"
             %i.form__field__must_info 必須
             %br
-            = f.text_field :prefecture, placeholder: "例）東京都", class: "form__field__form"
+            = f.collection_select :prefecture, JpPrefecture::Prefecture.all, :name, :name, {prompt: "選択してください" }, {class: "form__field__select"}
 
           .form__field
             = f.label "市町村区", class: "form__field__label"
