--- a/app/assets/stylesheets/_registration.scss
+++ b/app/assets/stylesheets/_registration.scss
@@ -86,6 +86,10 @@ header{
       width             : 100%;
       padding           : 10px 16px 8px 16px;
       margin-top        : 8px;
+      &--small{
+        width           : 43%;
+        display         : inline-block;
+      }
     }
     &__must_info{
       color            : white;
