--- a/app/views/creditcards/new.html.haml
+++ b/app/views/creditcards/new.html.haml
@@ -26,5 +26,5 @@
             = f.text_field :number, placeholder: "例）1234", class: "form__field__form"
             %p.form__field__noctice カード裏面の番号とは？
           .form__field
-            = f.submit "次へ進む", class: "form__field__button"
+            = f.submit "登録完了", class: "form__field__button"
   = render partial: "layouts/registration_footer"
