add header and footer template

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -7,6 +7,9 @@ $default_font_color            : #333333;
 $registration_form_font_color  : #757575;
 $registration_form_form_color  : #CCCCCC;
 $registration_form_red         : #EA352d;
+$copicari_red                  : #EA352d;
+$copicari_blue                 : #0099E8;
+$footercolor                   : #212121;
 
 //variables for size----------------------------
 $registration_header_logo_width  : 200px;
