--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,10 @@
 //font_awesome
 @import "font-awesome";
 
-@import "./registration"
+@import "./registration";
+
+@import "./header";
+
+@import "./index";
+
+@import "./footer"
