set footer as partial template

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -8,3 +8,6 @@
     = render partial: "layouts/items_list"
     = render partial: "layouts/items_list"
   = render partial: "layouts/footer"
+  =link_to root_path, class: "sell_btn" do
+    .sell_btn__text 出品
+    %i.fa.fa-camera.sell_btn__icon
