add view for items show

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -10,6 +10,7 @@ $registration_form_red         : #EA352d;
 $copicari_red                  : #EA352d;
 $copicari_blue                 : #0099E8;
 $footercolor                   : #212121;
+$item_data_table_grey          : #FAFAFA;
 
 //variables for size----------------------------
 $registration_header_logo_width  : 200px;
