add view for item purchase function

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,6 +1,7 @@
 // ----------------変数定義------------------------
 // variables for color----------------------------
 
+$copicari_back_ground_grey     : #F5F5F5;
 $registration_background_color : #F5F5F5;
 $progress_bar_font_color       : #888888;
 $default_font_color            : #333333;
