add items finish view for purchase complete view

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -12,6 +12,9 @@ $copicari_red                  : #EA352d;
 $copicari_blue                 : #0099E8;
 $footercolor                   : #212121;
 $item_data_table_grey          : #FAFAFA;
+$face_color_good               : #EF5185;
+$face_color_normal             : #FBA933;
+$face_color_bad                : #6AB5D8;
 
 //variables for size----------------------------
 $registration_header_logo_width  : 200px;
