--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -9,7 +9,7 @@
           .item_info
             = image_tag "logos/copicari_logo_small", class: "item_info__item_image"
             %p.item_info__item_name copicari!!!
-            .item_info__price_info.clearfix
+            .item_info__price_info
               %p.item_info__price_info__item_price ¥3,000
               %p.item_info__price_info__delivery_fee 送料込み
             .item_info__total_info.clearfix
