--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -4,12 +4,16 @@
 $copicari_back_ground_grey     : #F5F5F5;
 $registration_background_color : #F5F5F5;
 $progress_bar_font_color       : #888888;
+$sell_form_info_head_color     : #888888;
 $default_font_color            : #333333;
 $registration_form_font_color  : #757575;
 $registration_form_form_color  : #CCCCCC;
+$input_form_font_color         : #757575;
+$input_form_form_color         : #CCCCCC;
 $registration_form_red         : #EA352d;
 $copicari_red                  : #EA352d;
 $copicari_blue                 : #0099E8;
+$btn_grey                      : #AAAAAA;
 $footercolor                   : #212121;
 $item_data_table_grey          : #FAFAFA;
 $face_color_good               : #EF5185;
