revise direcrtory for image src

--- a/app/views/items/finish.html.haml
+++ b/app/views/items/finish.html.haml
@@ -7,7 +7,7 @@
       .form__inner
         .form__inner__container
           .item_info
-            = image_tag "logos/copicari_logo_small", class: "item_info__item_image"
+            = image_tag "logos/copicari_logo_small.png", class: "item_info__item_image"
             %p.item_info__item_name copicari!!!
             .item_info__price_info
               %p.item_info__price_info__item_price ¥3,000
