--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -6,12 +6,12 @@
     .item__data_box.clearfix
       .item__image_box
         .item__image_box__upper
-          = image_tag "logos/copicari_logo_small", class: "item__image_box__upper__image"
+          = image_tag "logos/copicari_logo_small.png", class: "item__image_box__upper__image"
         .item__image_box__bottom
-          = image_tag "logos/copicari_logo_small", class: "item__image_box__bottom__image"
-          = image_tag "logos/copicari_logo_small", class: "item__image_box__bottom__image"
-          = image_tag "logos/copicari_logo_small", class: "item__image_box__bottom__image"
-          = image_tag "logos/copicari_logo_small", class: "item__image_box__bottom__image"
+          = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
+          = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
+          = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
+          = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
       %table.item__data_table
         %tr
           %th 出品者
