--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,5 +12,8 @@
         %li.header__inner__links__item カテゴリー
         %li.header__inner__links__item ブランド
       %ul.header__inner__links__right
-        %li.header__inner__links__item.header__inner__links__item--red ログイン
-        %li.header__inner__links__item.header__inner__links__item--blue 新規会員登録
+        - if user_signed_in?
+          = link_to "ログアウト（仮）", destroy_user_session_path, method: :delete, class: "header__inner__links__item--red"
+        -else
+          = link_to "ログイン", new_user_session_path, class: "header__inner__links__item--red"
+          = link_to "新規会員登録", new_user_registration_path, class: "header__inner__links__item--blue"
