--- a/app/assets/stylesheets/_registration.scss
+++ b/app/assets/stylesheets/_registration.scss
@@ -109,6 +109,11 @@
       margin-left      : 8px;
       border-radius    : 2px;
     }
+    &__noctice{
+      text-align       : right;
+      font-size        : 12px;
+      color            : $copicari-blue;
+    }
     &__button{
       padding          :10px 50px;
       background-color : $registration_form_red;
@@ -118,7 +123,14 @@
       color            : white;
       font-size        : 14px;
       line-height      : 40px;
-
+      cursor           : pointer;
+      &--grey{
+        display          : inline-block;
+        padding          :10px 0px;
+        background-color : $btn_grey;
+        border           : none;
+        text-decoration  : none;
+      }
     }
   }
 }
