--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,7 +13,8 @@
         %li.header__inner__links__item ブランド
       %ul.header__inner__links__right
         - if user_signed_in?
-          = link_to "ログアウト（仮）", destroy_user_session_path, method: :delete, class: "header__inner__links__item--red"
+          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "header__inner__links__item--red"
+          = link_to "ユーザー情報変更", edit_user_registration_path, class: "header__inner__links__item--red_inversion"
         -else
           = link_to "ログイン", new_user_session_path, class: "header__inner__links__item--red"
           = link_to "新規会員登録", new_user_registration_path, class: "header__inner__links__item--blue"
