add user info edit view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,8 @@
 
 // 各種アクション用
 @import "./registration";
+@import "./login";
 @import "./index";
 @import "./show";
 @import "./buy";
-@import "./sell"
+@import "./sell";
