--- a/app/assets/stylesheets/_sell.scss
+++ b/app/assets/stylesheets/_sell.scss
@@ -50,6 +50,7 @@
     font-size          : 14px;
   }
   &__drop_box{
+    display            : block;
     border             : 1px dashed $input_form_form_color;
     background-color   : $copicari_back_ground_grey;
     margin-top         : 20px;
@@ -58,12 +59,21 @@
     font-size          : 14px;
     line-height        : 21px;
     height             : 80px;
+    &__supplement{
+      position         : relative;
+      top              : 150px;
+      left             : 180px;
+      color            : $sell_form_info_head_color;
+    }
   }
   &__input{
     @include sell_form_default;
+    &--select{
+      @include select_form_default;
+    }
   }
   &__item_description{
-    height             : 120px;
+    height             : 200px;
   }
   &__info_head{
     font-size          : 14px;
@@ -73,8 +83,10 @@
   }
   &__price_form{
     @include sell_form_default;
-    width              : 160px;
+    width              : 126px;
     display            : inline-block;
+    margin-bottom      : 24px;
+    line-height        : 26px;
     text-align         : right;
     float              : right;
   }
@@ -88,9 +100,11 @@
   text-align           : center;
   line-height          : 50px;
   color                : white;
+  cursor               : pointer;
 
   &--red{
     background-color   : $copicari_red;
+    border: 1px solid #EA352d;
   }
 
   &--grey{
@@ -98,9 +112,12 @@
   }
 
   &--small{
+    margin             : 0px auto;
+    display            : block;
     width              : 300px;
     margin             : 0px auto;
     margin-top         : 24px;
+    text-decoration    : none;
   }
 }
 
