--- a/app/views/layouts/_header_plane.html.haml
+++ b/app/views/layouts/_header_plane.html.haml
@@ -1,3 +1,3 @@
 .header__logo_container
-  =image_tag "logos/copicari.png", class: "header__logo" do
-    =link_to root_path class: "logo"
+  =link_to root_path class: "logo" do
+    =image_tag "logos/copicari.png", class: "header__logo"
