change index view to show registered items

--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -1,3 +1,8 @@
+a {
+  color           : $default_font_color;
+  text-decoration : none;
+}
+
 .items_container{
   width           : 100%;
   padding         : 40px 0px;
