--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -79,6 +79,12 @@
 
 // header_plane用CSS
 .header__logo{
-  height: 60px;
-  margin: 30px 0px;
+  height     : 60px;
+  margin     : 30px 0px;
+  transition : all 500ms 0s ease;
+  &:hover{
+  opacity   :  0.7;
+  filter    :  alpha( opacity=70);
+  -ms-filter: “alpha( opacity=70 )”;
+  }
 }
