--- a/app/views/layouts/_items_list.html.haml
+++ b/app/views/layouts/_items_list.html.haml
@@ -1,12 +1,13 @@
-.item_content.clearfix
-  - @items.each do |item|
-    = link_to item_path(item) do
-      .item_box
-        - if item.images[0] != nil
-          = image_tag item.images[0].image , class: "item_box__image"
-        - else
-          = image_tag "logos/copicari_logo_small.png" , class: "item_box__image", height: 165
-        .item_box__body
-          %p.item_box__body__name  #{item.name}
-          %p.item_box__body__price ¥ #{item.price}
-          %p.item_box__body__tax   (税 ¥0)
+-@items.each do |items_group|
+  .item_content.clearfix
+    - items_group.each do |item|
+      = link_to item_path(item) do
+        .item_box
+          - if item.images[0] != nil
+            = image_tag item.images[0].image , class: "item_box__image"
+          - else
+            = image_tag "logos/copicari_logo_small.png" , class: "item_box__image", height: 165
+          .item_box__body
+            %p.item_box__body__name  #{item.name}
+            %p.item_box__body__price ¥ #{item.price}
+            %p.item_box__body__tax   (税 ¥0)
