--- a/app/views/layouts/_items_list.html.haml
+++ b/app/views/layouts/_items_list.html.haml
@@ -8,6 +8,7 @@
           - else
             = image_tag "logos/copicari_logo_small.png" , class: "item_box__image", height: 165
           .item_box__body
-            %p.item_box__body__name  #{item.name}
+            .item_box__body__name_box
+              %p.item_box__body__name_box__name  #{item.name}
             %p.item_box__body__price ¥ #{item.price}
             %p.item_box__body__tax   (税 ¥0)
