--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -28,19 +28,33 @@ a {
 .item_box{
   float           : left;
   background-color: white;
-  width           : 23%;
+  width           : 220px;
+  height          : 330px;
   margin-right    : 2%;
   margin-top      : 10px;
   margin-bottom   : 10px;
   &__image{
-    width         : 100%;
+    width         : 220px;
+    height        : 220px;
   }
   &__body{
     text-align    : left;
     padding       :10px;
-    &__name{
-      font-size   : 16px;
-      font-weight : 700;
+    &__name_box{
+      height      : 48px;
+      &:after{
+        display    : block;
+        content    : "";
+        bottom     : 0;
+        right      : 0;
+        width      : 50%;
+        height     : 1.5em;
+        background : linear-gradient(to right, rgba(255,255,255,0), #fff 72%);
+      }
+      &__name{
+        font-size   : 16px;
+        font-weight : 700;
+      }
     }
     &__price{
       font-size   : 20px;
