--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,9 @@
 %header.general_header
   .header__inner.clearfix
-    .header__inner__logo_container
-      =image_tag "logos/copicari.png", class: "header__inner__logo" do
-        =link_to root_path class: "logo"
+    .clearfix
+      .header__inner__logo_container
+        =link_to root_path class: "logo" do
+          =image_tag "logos/copicari.png", class: "header__inner__logo"
       = form_tag "root_path", class: "header__inner__form" do
         %input.header__inner__form__text_field{name:"keyword", placeholder:"検索機能はまだありません", type:"search"}
         %button.header__inner__form__btn
