--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -59,6 +59,7 @@
   }
 
   &__purchase_btn{
+    display          : block;
     width            : 100%;
     margin-top       : 16px;
     padding          : 10px 0px;
