--- a/app/views/buyers/create.html.haml
+++ b/app/views/buyers/create.html.haml
@@ -7,27 +7,27 @@
       .form__inner
         .form__inner__container
           .item_info
-            = image_tag "logos/copicari_logo_small.png", class: "item_info__item_image"
-            %p.item_info__item_name copicari!!!
+            = image_tag @item.images[0].image, class: "item_info__item_image"
+            %p.item_info__item_name #{@item.name}
             .item_info__price_info
-              %p.item_info__price_info__item_price ¥3,000
-              %p.item_info__price_info__delivery_fee 送料込み
+              %p.item_info__price_info__item_price ¥#{@item.price}
+              %p.item_info__price_info__delivery_fee #{@item.delivery_fee}
       .form__inner
         .form__inner__container
           %p.buy_info__title 配送先
           .address_info
             %ul.address_info__list.buy_info__list
-              %li.address_info__zip_code 〒000-0000
-              %li.address_info__address  東京都渋谷区〇〇〇
-              %li.address_info__name     小光 太郎
+              %li.address_info__zip_code 〒#{current_user.zip_code.insert(3, "-")}
+              %li.address_info__address  #{current_user.prefecture}#{current_user.city}#{current_user.house_number}#{current_user.building}
+              %li.address_info__name     #{current_user.family_name} #{current_user.first_name}
       .form__inner
         .form__inner__container
           .payment_info
             %p.buy_info__title 支払い方法
             %ul.payment_info__list.buy_info__list
-              %li.payment_info__number       0000-0000-0000
-              %li.address_info__expire_date  〇〇/〇〇
-              %li.address_info__company      VISA
+              %li.payment_info__number #{current_user.number}
+              %li.address_info__expire_date  #{current_user.expire_month}/ #{current_user.expire_year}
+              %li.address_info__company #{current_user.campany}
       .form__inner
         .form__inner__container
           .transaction_info
@@ -53,5 +53,5 @@
                   %br/
                   評価後に取引は完了です。
               %li.transaction_info__list__item
-                = link_to "マイページへもどる", root_path
+                = link_to "トップページへもどる", root_path
   = render partial: "layouts/registration_footer"
