--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -3,6 +3,79 @@ a {
   text-decoration : none;
 }
 
+.front_image{
+  background-image: image-url("front.png");
+  background-size : cover;
+  height          : 390px;
+  position        : relative;
+  overflow        : hidden;
+  z-index         : 0;
+  &:before{
+  content         : '';
+  background      : inherit;    /*.bgImageで設定した背景画像を継承*/
+  filter          : blur(1.5px);/*ぼやけ量の設定*/
+  position        : absolute;
+  top             : -5px;
+  left            : -5px;
+  right           : -5px;
+  bottom          : -5px;
+  z-index         : -1;
+  }
+
+  &__left_box{
+    position      : absolute;
+    top           : 15%;
+    left          : 18%;
+    color         : white;
+    text-shadow   : 1px 1px 3px $default_font_color;
+    text-align    : left;
+
+    & h1{
+      font-size   : 60px;
+      font-weight : 600;
+      line-height : 1.2;
+    }
+    & p{
+      color       : white;
+      font-size   : 18px;
+      line-height : 32px;
+      margin-top  : 16px;
+    }
+
+    &__stores{
+      margin-top  : 16px;
+      &__image{
+        width     : 170px;
+        float     : left;
+        cursor    : pointer;
+        &--right{
+          margin-left : 10px;
+        }
+        &:hover{
+          opacity     : 0.4;
+        }
+      }
+    }
+  }
+
+  &__phone_image{
+    position : absolute;
+    top      : -40px;
+    right    : 120px;
+    height   : 500px;
+    transform:rotate(10deg)
+  }
+}
+.consept_section{
+  padding         :40px 20px;
+  background-color: white;
+  & h2{
+    font-size  : 26px;
+    font-weight: bold;
+    line-height: 1.2;
+  }
+}
+
 .items_container{
   width           : 100%;
   padding         : 40px 0px;
@@ -33,16 +106,32 @@ a {
   margin-right    : 2%;
   margin-top      : 10px;
   margin-bottom   : 10px;
+  overflow        : hidden;
+  position        : relative;
   &__image{
     width         : 220px;
     height        : 220px;
+    position      : relative;
+    &--sold{ /*売り切れのSoldを表す設定*/
+      background  : $copicari_red;
+      color       : #FFF;
+      font-size   : 26px;
+      font-weight : 600;
+      padding     : 70px 0px 3px;
+      position    : absolute;
+      left        : -85px;
+      top         : -42px;
+      text-align  : center;
+      width       : 200px;
+      transform   : rotate(-45deg);
+    }
   }
   &__body{
     text-align    : left;
     padding       :10px;
     &__name_box{
       height      : 48px;
-      &:after{
+      &:after{ /*一覧画面で商品名の末尾をぼやかす設定*/
         display    : block;
         content    : "";
         bottom     : 0;
