--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,7 +5,7 @@
         =link_to root_path class: "logo" do
           =image_tag "logos/copicari.png", class: "header__inner__logo"
       = form_tag "root_path", class: "header__inner__form" do
-        %input.header__inner__form__text_field{name:"keyword", placeholder:"検索機能はまだありません", type:"search"}
+        %input.header__inner__form__text_field{name:"keyword", placeholder:"検索機能はまだありません", type:"text"}
         %button.header__inner__form__btn
           %i.fa.fa-search
     .header__inner__links.clearfix
@@ -14,8 +14,8 @@
         %li.header__inner__links__item ブランド
       %ul.header__inner__links__right
         - if user_signed_in?
+          = link_to "マイページ", user_path(current_user.id), class: "header__inner__links__item--blue"
           = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "header__inner__links__item--red"
-          = link_to "ユーザー情報変更", edit_user_registration_path, class: "header__inner__links__item--red_inversion"
         -else
           = link_to "ログイン", new_user_session_path, class: "header__inner__links__item--red"
           = link_to "新規会員登録", new_user_registration_path, class: "header__inner__links__item--blue"
