--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -15,10 +15,13 @@ $copicari_red                  : #EA352d;
 $copicari_blue                 : #0099E8;
 $btn_grey                      : #AAAAAA;
 $footercolor                   : #212121;
+$header_serachform_grey        : #FAFAFA;
 $item_data_table_grey          : #FAFAFA;
 $face_color_good               : #EF5185;
 $face_color_normal             : #FBA933;
 $face_color_bad                : #6AB5D8;
+$my_page_menu_bar_grey         : #EEEEEE;
+$my_page_menu_arrow_grey       : #CCCCCC;
 
 //variables for size----------------------------
 $registration_header_logo_width  : 200px;
