--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -15,7 +15,8 @@
       %table.item__data_table
         %tr
           %th 出品者
-          %td #{@item.user.name}
+          %td
+            = link_to @item.user.name, user_path(@item.user)
         %tr
           %th カテゴリー
           %td
