replace logo picture and fix css

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -3,7 +3,10 @@
   width            : 100%;
 
   &__logo{
-    width          : 200px;
+    height         : 75px;
+    width          : 160px;
+    position       : relative;
+    right          : 10px;
   }
   &__copy_rights{
     color          : white;
