add and fix views for followed users item list

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,7 +11,8 @@
     .header__inner__links.clearfix
       %ul.header__inner__links__left
         %li.header__inner__links__item カテゴリー
-        %li.header__inner__links__item ブランド
+        %li.header__inner__links__item
+          = link_to "フォロー出品者の商品", followers_path
       %ul.header__inner__links__right
         - if user_signed_in?
           = link_to "マイページ", user_path(current_user.id), class: "header__inner__links__item--blue"
