--- a/app/views/followers/index.html.haml
+++ b/app/views/followers/index.html.haml
@@ -1,21 +1,22 @@
 .container
   = render partial: "layouts/header"
   .container__inner.clearfix
-    %ul.container__inner__menu
-      %li.container__inner__menu__item.turn_grey
-        = link_to "マイページメニュー", user_path(current_user)
-      %li.container__inner__menu__item.turn_grey
-        = link_to "出品商品一覧", root_path
-      %li.container__inner__menu__item.container__inner__menu__item--grey.turn_grey
-        = link_to "購入商品一覧", root_path
-      %li.container__inner__menu__item
-        = link_to "フォロー出品者の商品一覧", followers_path
-      %li.container__inner__menu__item.turn_grey
-        = link_to "ユーザー情報変更", edit_user_registration_path
+    - if @user.id == current_user.id
+      %ul.container__inner__menu
+        %li.container__inner__menu__item
+          = link_to "マイページメニュー", user_path(current_user)
+        %li.container__inner__menu__item
+          = link_to "出品商品一覧", root_path
+        %li.container__inner__menu__item
+          = link_to "購入商品一覧", user_buyers_path(current_user.id)
+        %li.container__inner__menu__item.container__inner__menu__item--grey
+          = link_to "フォロー出品者の商品一覧", followers_path
+        %li.container__inner__menu__item
+          = link_to "ユーザー情報変更", edit_user_registration_path
     .container__inner__list_box.container__right_inner
       .container__inner__list_box__item.container__right_inner__item_box
         .container__right_inner__item_box__title.clearfix
-          %h2 購入商品一覧
+          %h2 フォローしているユーザの商品
         .container__right_inner__item_box__content.clearfix
           -if @items
             -@items.each do |items_group|
