small fixes in views

--- a/app/views/layouts/_registration_header.html.haml
+++ b/app/views/layouts/_registration_header.html.haml
@@ -1,7 +1,7 @@
 .header__content.clearfix
   .header__content__logo
-    =image_tag "logos/copicari.png" do
-      =link_to root_path class: "logo"
+    =link_to root_path class: "logo" do
+      =image_tag "logos/copicari.png"
   %ul.header__content__progress_bar.clearfix
     %li.header__content__progress_bar__item.stage1 会員情報
     %li.header__content__progress_bar__item.stage2 住所入力
