--- a/app/views/followers/index.html.haml
+++ b/app/views/followers/index.html.haml
@@ -14,25 +14,9 @@
         %li.container__inner__menu__item
           = link_to "ユーザー情報変更", edit_user_registration_path
     .container__inner__list_box.container__right_inner
-      .container__inner__list_box__item.container__right_inner__item_box
+      .container__right_inner__item_box
         .container__right_inner__item_box__title.clearfix
           %h2 フォローしているユーザの商品
         .container__right_inner__item_box__content.clearfix
-          -if @items
-            -@items.each do |items_group|
-              .container__right_inner__list_box__item_content.clearfix
-                - items_group.each do |item|
-                  = link_to item_path(item) do
-                    .item_box
-                      - if item.stock_status != 1
-                        = image_tag item.images[0].image , class: "item_box__image"
-                      - else
-                        .item_box--sold
-                          = image_tag item.images[0].image , class: "item_box__image"
-                          %span.item_box__image--sold SOLD
-                      .item_box__body
-                        .item_box__body__name_box
-                          %p.item_box__body__name_box__name  #{item.name}
-                        %p.item_box__body__price ¥ #{item.price}
-                        %p.item_box__body__tax   (税 ¥0)
+          = render partial: "layouts/small_item_list"
   = render partial: "layouts/footer"
