add showing bought items list function

--- a/app/assets/stylesheets/_registration.scss
+++ b/app/assets/stylesheets/_registration.scss
@@ -2,6 +2,7 @@
   background-color : $registration_background_color;
   text-align       : center;
   min-height       : 100%;
+  max-width        : 100vw;
 }
 
 .header__content{
