--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -6,7 +6,7 @@
         %li.container__inner__menu__item.container__inner__menu__item--grey
           マイページメニュー
         %li.container__inner__menu__item
-          = link_to "出品商品一覧", root_path
+          = link_to "出品商品一覧", sell_list_users_path
         %li.container__inner__menu__item
           = link_to "購入商品一覧", user_buyers_path(current_user.id)
         %li.container__inner__menu__item
