refactoring : move action "buy list" to users controller

--- a/app/views/users/buy_list.html.haml
+++ b/app/views/users/buy_list.html.haml
@@ -7,7 +7,7 @@
       %li.container__inner__menu__item.turn_grey
         = link_to "出品商品一覧", sell_list_users_path
       %li.container__inner__menu__item.container__inner__menu__item--grey
-        = link_to "購入商品一覧", root_path
+        = link_to "購入商品一覧", buy_list_users_path
       %li.container__inner__menu__item.turn_grey
         = link_to "フォロー出品者の商品一覧", followers_path
       %li.container__inner__menu__item.turn_grey
