--- a/app/views/followers/index.html.haml
+++ b/app/views/followers/index.html.haml
@@ -8,7 +8,7 @@
         %li.container__inner__menu__item
           = link_to "出品商品一覧", root_path
         %li.container__inner__menu__item
-          = link_to "購入商品一覧", user_buyers_path(current_user.id)
+          = link_to "購入商品一覧", buy_list_users_path
         %li.container__inner__menu__item.container__inner__menu__item--grey
           = link_to "フォロー出品者の商品一覧", followers_path
         %li.container__inner__menu__item
